# openSMT

./: .gitignore  ARCHITECTURE_PLACEMENT_HEAD_EVAL.md  FRONTEND_BACKEND_COMMUNICATION.md  LICENSE  README.md  behindthescenes.md  config_manager.py  createStructure.bash  createstructure2.bash  gui.bash  main.py  main_window.py  pyproject.toml  requirements.txt  server.bash
ai_help/: coordinates.txt
config/: __init__.py  config_manager.py  default_config.json
config/examples/: broker.json  camera_module.json  catalog.sqlite  feeders.json  modules.json  nozzles.json  playback.txt  serial_ports_main.json  system.boards.json  system.camera_resolutions.runtime.json  system.driver.json  system.json  system.locations.json  system.locations.runtime.json  system.nozzle_offsets.runtime.json
config/examples/camera/: camera.cameras.json  camera.core.json  camera.pipelines.json
config/examples/feeders/: 53D64C75B3F152EA.json  A100000000000001.json  A100000000000005.json  A100000000000011.json
config/macos/: main.json
drivers/: camera_driver.py  gcode_driver.py  gcode_handler.py
hardware/: __init__.py
hardware/camera/: __init__.py  camera_device.py  camera_manager.py  vision_pipeline.py
hardware/gcode/: __init__.py  gcode_device.py  gcode_handler.py
pipelines/: default.json  edge_detection.json  grayscale_threshold.json
src/opensmt/: app.py  cli.py
src/opensmt/config/: loader.py
src/opensmt/hardware/: __init__.py  board.py  driver.py
src/opensmt/messaging/: __init__.py  broker.py  node.py  (+1 more)
utils/: __init__.py  file_watcher.py
widgets/: gcode_terminal.py
(+21 files in other folders)
